2024-04-27
v2.11
  + OpenSSL 3.0 support

2024-03-19
v2.10
  + added initial Qt6 support

2021-08-14
v2.9 kssytsrk
  * Add OMEMO-encrypted MUC logging functionality

2021-02-20
v2.8 stigger
  * Fix sending incorrect PEP requests from somebody else's JID when
    decrypting a carbon copy.
  * Fix incorrect device ID lookup using a full JID instead of a bare JID.

2020-06-24
v2.7 tehnick
  * Small fix in stanza for beginning of OMEMO session.

2020-06-03
v2.6 tehnick
  * Improve compatibility with XMPP clients which do not support of XEP-0380

2020-05-26
v2.5 tehnick
  * Forcibly ask server for keys:
    * for all own devices
    * for each device of each contact
  * Small code refactoring

2020-05-25
v2.3 tehnick
  * Improve plugin options dialog:
    - add "Device ID" column to Known Keys tab
    - add ability to copy fingerprints from all tables
    - add support of selecting of multiple rows in all tables
  * Do not show trust confirmation dialog for devices with unknown keys
  * Update list of interlocutor's devices after receiving of encrypted message
    from unknown device. [Thanks to taurus]

2020-05-21
v2.2 tehnick
  * Improve plugin description in "About plugin" dialog

2020-05-18
v2.1 tehnick
  * Improve plugin options dialog

2020-05-09
v2.0 tehnick
  * Add plugin options:
    * OMEMO encryption policy:
      * Always enabled
      * Enabled by default
      * Disabled by default
    * Automatically mark new own devices as trusted
    * Automatically mark new interlocutors devices as trusted
  * Add above options to settings dialog

2020-05-07
v1.1 tehnick
  * add button "Delete all OMEMO data for current device" to plugin settings
    dialog

2020-05-06
v1.0 tehnick
  * save labels for contact devices to database if they are available
  * do not remove session keys during deleting of contact's devices,
    because it breaks sessions with other xmmp clients
  * add confirmation dialog before deleting of own device

2020-05-06
v0.9 tehnick