@@ -1,7 +1,0 @@
-CONFIG += c++11
-SOURCES += main.cpp
-
-unix {
-    CONFIG += link_pkgconfig
-    PKGCONFIG += libsignal-protocol-c
-}
