@@ -1,7 +1,7 @@
 {
   "name": "OMEMO",
   "shortname": "omemo",
-  "version": "2.10",
+  "version": "2.11",
   "priority": 2,
   "icon": "base64:iVBORw0KGgoAAAANSUhEUgAAABAAAAAKCAYAAAC9vt6cAAAEGWlDQ1BrQ0dDb2xvclNwYWNlR2Vu ZXJpY1JHQgAAOI2NVV1oHFUUPrtzZyMkzlNsNIV0qD8NJQ2TVjShtLp/3d02bpZJNtoi6GT27s6Y yc44M7v9oU9FUHwx6psUxL+3gCAo9Q/bPrQvlQol2tQgKD60+INQ6Ium65k7M5lpurHeZe58853v nnvuuWfvBei5qliWkRQBFpquLRcy4nOHj4g9K5CEh6AXBqFXUR0rXalMAjZPC3e1W99Dwntf2dXd /p+tt0YdFSBxH2Kz5qgLiI8B8KdVy3YBevqRHz/qWh72Yui3MUDEL3q44WPXw3M+fo1pZuQs4tOI BVVTaoiXEI/MxfhGDPsxsNZfoE1q66ro5aJim3XdoLFw72H+n23BaIXzbcOnz5mfPoTvYVz7KzUl 5+FRxEuqkp9G/Ajia219thzg25abkRE/BpDc3pqvphHvRFys2weqvp+krbWKIX7nhDbzLOItiM83 58pTwdirqpPFnMF2xLc1WvLyOwTAibpbmvHHcvttU57y5+XqNZrLe3lE/Pq8eUj2fXKfOe3pfOjz hJYtB/yll5SDFcSDiH+hRkH25+L+sdxKEAMZahrlSX8ukqMOWy/jXW2m6M9LDBc31B9LFuv6gVKg /0Szi3KAr1kGq1GMjU/aLbnq6/lRxc4XfJ98hTargX++DbMJBSiYMIe9Ck1YAxFkKEAG3xbYaKmD DgYyFK0UGYpfoWYXG+fAPPI6tJnNwb7ClP7IyF+D+bjOtCpkhz6CFrIa/I6sFtNl8auFXGMTP34s NwI/JhkgEtmDz14ySfaRcTIBInmKPE32kxyyE2Tv+thKbEVePDfW/byMM1Kmm0XdObS7oGD/MypM XFPXrCwOtoYjyyn7BV29/MZfsVzpLDdRtuIZnbpXzvlf+ev8MvYr/Gqk4H/kV/G3csdazLuyTMPs bFhzd1UabQbjFvDRmcWJxR3zcfHkVw9GfpbJmeev9F08WW8uDkaslwX6avlWGU6NRKz0g/SHtCy9 J30o/ca9zX3Kfc19zn3BXQKRO8ud477hLnAfc1/G9mrzGlrfexZ5GLdn6ZZrrEohI2wVHhZywjbh UWEy8icMCGNCUdiBlq3r+xafL549HQ5jH+an+1y+LlYBifuxAvRN/lVVVOlwlCkdVm9NOL5BE4wk Q2SMlDZU97hX86EilU/lUmkQUztTE6mx1EEPh7OmdqBtAvv8HdWpbrJS6tJj3n0CWdM6busNzRV3 S9KTYhqvNiqWmuroiKgYhshMjmhTh9ptWhsF7970j/SbMrsPE1suR5z7DMC+P/Hs+y7ijrQAlhyA gccjbhjPygfeBTjzhNqy28EdkUh8C+DU9+z2v/oyeH791OncxHOs5y2AtTc7nb/f73TWPkD/qwBn jX8BoJ98VQNcC+8AAAIRSURBVCgVY2BAAzFqDAuDlBh2A4U5gZgRiM2AOAmIDYAYA4AUwAD7plKf dWLvLriwMjEwnOCzv/j+ysE31kLf1f6rWLPeO3fsS/P+N30PvzHMhWkA0cxQDvPCypjrklrm5nxS SszSTw8wc+l5SktIy6r++v2bQzmhW0jTwkXo3YnV7068+LcJqIcdiDmA+A/YBesqAqOVH25ZzMLE xHhf3ptBWoCDgVnFmuH5d2YGlZ25DHf/CP39Ja71Zcf1N4uUnWOeM+/tq3v/+Qv7ORGXjYwdVizX jFSkWPVYX6qwAd3z/A83A5NbOcPbywcYeF5fYVh39S1D2tyjDE86PBi4czYwnFvQyOD/+wDQcgaG 7FNcf5m+/2H4K/DzheLpbyIMTIyMDH/ZuBl+f//CoP76AAPH3y8MJsIMDN/fv2Zg//EOTP8HhytY PwMbM8t/Zi2hfx/VhVj//WXhVhNi/s780jyXgevOXgaWz08YDulWMqi/3MPw/ugqBlbGvwwrd59c yajvu+z65cvWp98wMD6ScJwOj4XWdD9XS+730xk/PlcQY/vz96Wg9tMD32U3yFyca24swiBw6d3/ r5n7/mz88Y+hFWg/KBCBccXwE+IWKLnSg8HrcBDzy8NBrJeTZRiEoMK8QNoFiC2AGG4hVI6BBcYA 0Z++M3y+8eZv1otvf0X/8DA4AoXWAvFnIN4DxFgBAEivuvd3beA8AAAAAElFTkSuQmCC",
   "description": "OMEMO is an end-to-end encryption protocol that leverages the Double Ratchet encryption scheme to provide multi-end to multi-end encryption, allowing messages to be synchronized securely across multiple clients, even if some of them are offline.",
