@@ -67,7 +67,7 @@ then
                              ${PREFIX}-hunspell \
                              ${PREFIX}-minizip \
                              ${PREFIX}-libotr \
-                             ${PREFIX}-libomemo-c \
+                             ${PREFIX}-libomemo \
                              ${PREFIX}-tidy-html5 \
                              ${PREFIX}-qtbase \
                              ${PREFIX}-qttools \
